Fixed alignment and background color issues for Android versions.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #E5E5E5;
+}
+
 #generate-weapon {
   position: relative;
   top: 40%;
